--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,4 +14,23 @@ layout: default
 		{{ content }}
 	</div>
 
+    <div id="disqus_thread"></div>
+
+    <script type="text/javascript">
+
+		// more options @ http://help.disqus.com/customer/portal/articles/472098-javascript-configuration-variables
+        var disqus_shortname = 'pingfu';		
+
+        (function() {
+            var dsq = document.createElement('script'); 
+            dsq.type = 'text/javascript'; 
+            dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+        
+    </script>
+
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
 </section>
