--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@ layout: master
   <div id="logo"><img src="/img/pingfu.png" alt="Pingfu"></div>
   {% endif %}
 
-  <header>
+  <header id="api">
     <span id="welcome"><a href="http://pingfu.net/">{{ site.name }}</a></span>
     <nav>{% include /menu.html %}</nav>
   </header>
