--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -39,6 +39,9 @@
 
 
 
+
+  <blockquote>Knock knock<br />Race condition<br />Who's there?</blockquote>
+
   <script type="text/javascript">
 
     /* pull menu for mobile */
