--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,13 @@ section {
   margin: 80px auto;
   max-width: 1080px;
   padding: 20px;
+  position: relative;
+}
+
+#popout {
+  position: absolute;
+  right: 20px;
+  top: 20px;
 }
 
 section.boxed {
