--- a/css/main.css
+++ b/css/main.css
@@ -126,12 +126,6 @@ section {
   position: relative;
 }
 
-#popout {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-}
-
 section.boxed {
   background-color: #ffffff;
   border: 1px solid #e9e9e9;  
@@ -216,6 +210,10 @@ section.large {
   line-height: 1.6;
   letter-spacing: .01em;
   margin: 0 0 5px;
+}
+
+#wrapper li a {
+  white-space: nowrap;
 }
 
 #wrapper code { 
