--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -57,12 +57,13 @@
 	{
 	  $(".owl-carousel").owlCarousel({
 		stopOnHover : true,
-		navigation:true,
+		navigation: false,
 		paginationSpeed : 1000,
 		goToFirstSpeed : 2000,
 		lazyLoad : true,
 		singleItem : true,
 		autoHeight : true,
+		paginationNumbers: true,
 		transitionStyle:"fade"
 	  });
 	});
