--- a/css/main.css
+++ b/css/main.css
@@ -289,6 +289,11 @@ blockquote {
     left: 10px;
 }
 
+.postDate { 
+	width: 80px;
+	display: inline-block;
+}
+
 .owl-carousel {
 	margin-bottom: 16px;
 }
@@ -377,7 +382,6 @@ blockquote {
     width: auto; 
     display: inline-block;
   }
-
 
   #pull {
     display: block;
