updated post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
 <section class="boxed">
 
-	<div class="breadcrumb"><a href="/">Pingfu</a> <span class="divider">›</span> <a href="/blog">Blog</a> <span class="divider">›</span> {{ page.title }}</div>
+	<div class="breadcrumb">Pingfu <span class="divider">›</span> <a href="/">Home</a> <span class="divider">›</span> {{ page.title }}</div>
 
 	<h2>{{ page.title }}</h2>
 	<p class="meta">{{ page.date | date_to_string }} — {% for category in page.categories %} <span class="category">{{ category }}</span> {% endfor %}</p>
