--- a/css/main.css
+++ b/css/main.css
@@ -351,21 +351,18 @@ blockquote {
 	white-space: wrap;
 }
 
-.owl-carousel {
-	margin-bottom: 16px;
+.slick-slide p {
+	margin-top: 16px !important;
 }
 
-.owl-carousel .owl-item div{
-
+.slick-carousel div {
+	text-align: center;
 }
 
-.owl-carousel .owl-item img{
+.slick-carousel img {
 	margin: 0 auto;
-	display: block;
-	height: auto;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 
