--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -17,6 +17,8 @@
     }
   </style>
 
+  <link rel="icon" href="//favicon.ico" type="image/x-icon" />
+  
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300|Open+Sans+Condensed:300">
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
