--- a/css/syntax.css
+++ b/css/syntax.css
@@ -63,6 +63,8 @@
 .highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; }
 .highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
 
+.highlight table { border: none; }
+
 /* instruct browser not to allow lineno elements to contain selectable text */
 .lineno {
   -webkit-touch-callout: none;
