--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: master
 
 <div id="wrapper">
 
-  {% if page.url == "/index" %} 
+  {% if page.url == "/" %} 
   <div id="logo"><img src="/img/pingfu.png" alt="Pingfu"></div>
   {% endif %}
 
