--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 layout: master
 ---
 
+ {{ page.url }}
+
 <div id="mobile-navigation">
   <a href="#" id="pull">Pingfu</a>
   {% include /menu.html %}
