renamed open-source page

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 <ul>
     <li><a {% if page.url == "/" %}      			class="active-link" {% endif %} href="/">Home</a></li>
     <li><a {% if page.url == "/tools.html" %}       class="active-link" {% endif %} href="/tools">Tools</a></li>
-    <li><a {% if page.url == "/open-source.html" %} class="active-link" {% endif %} href="/open-source">Open Source</a></li>
+    <li><a {% if page.url == "/code.html" %}        class="active-link" {% endif %} href="/code">Code</a></li>
     <li><a {% if page.url == "/about.html" %}       class="active-link" {% endif %} href="/writing">About</a></li>
 </ul>
