--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,5 +2,5 @@
     <li><a {% if page.url == "/" %}      			class="active-link" {% endif %} href="/">Home</a></li>
     <li><a {% if page.url == "/tools.html" %}       class="active-link" {% endif %} href="/tools">Tools</a></li>
     <li><a {% if page.url == "/code.html" %}        class="active-link" {% endif %} href="/code">Code</a></li>
-    <li><a {% if page.url == "/about.html" %}       class="active-link" {% endif %} href="/writing">About</a></li>
+    <li><a {% if page.url == "/about.html" %}       class="active-link" {% endif %} href="/about">About</a></li>
 </ul>
