--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ redirect_from: "/blog/"
 
 <section class="boxed">
 
-	<div class="breadcrumb"><a href="/writing.html">Articles</a> <span class="divider">›</span> {{ page.title }}</div>
+	<div class="breadcrumb"><a href="/">Articles</a> <span class="divider">›</span> {{ page.title }}</div>
 
 	<h2>{{ page.title }}</h2>
 	<p class="meta">{{ page.date | date_to_string }} — {% for category in page.categories %} <span class="category">{{ category }}</span> {% endfor %}</p>
