--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 body { 
   font-size: 1.05em;
   line-height: 1.25em;
-  font-family: 'Segoe UI', 'Helvetica Neue', Helvetica, Arial;
+  font-family: 'Segoe UI', Helvetica, Arial;
   background: #F0F2F3;
   color: #555;
   min-width: 320px;
@@ -161,7 +161,7 @@ section table {
 }
 
 section table, section td {	
-	font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	font-size: small;
 	color: #626566;
 	line-height: 1.6;
@@ -226,7 +226,7 @@ section th {
 }
 
 #wrapper p {
-  font-family: 'Segoe UI', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI', Helvetica, Arial, sans-serif;
   color: #626566;
   font-size: 14px;
   line-height: 1.9;
@@ -255,7 +255,6 @@ section th {
 }
 
 #wrapper li { 
-  font-family: 'Segoe UI', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   color: #626566;
   font-size: 13px;
   line-height: 1.6;
@@ -281,7 +280,7 @@ section th {
 
 #wrapper code { 
   margin: 0 2px;
-  padding: 1px 5px 3px 5px;
+  padding: 3px 5px 3px 5px;
   border: 1px solid #eee;
   background-color: #FFFFF5;
   border-radius: 3px;
@@ -333,9 +332,8 @@ sup {
 }
 
 .breadcrumb {
-  font-family: 'Segoe UI', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   color: #626566;
-  font-size: 11px;
+  font-size: 12px;
   line-height: 1.6;
   letter-spacing: .01em;
   border: 1px solid #eee;
