--- a/css/api.css
+++ b/css/api.css
@@ -42,6 +42,14 @@
 	min-width: 260px;
 }
 
+.formFields button {
+    height: 27px;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    color: #555555;
+}
+
 #wrapper .formFields p { 
 	margin: 0;
 }
