--- a/css/api.css
+++ b/css/api.css
@@ -42,12 +42,20 @@
 	min-width: 260px;
 }
 
-.formFields button {
+button {
     height: 27px;
     background-color: #f5f5f5;
     border: 1px solid #ccc;
     border-radius: 3px;
     color: #555555;
+}
+
+button:hover {
+    background-color: #fff;
+}
+
+button:active {
+    box-shadow: inset 0 1px 5px rgba(0,0,0,0.125);
 }
 
 #wrapper .formFields p { 
