--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -1,4 +1,9 @@
-.highlight  { background: #ffffff; }
+---
+---
+
+.highlight { background-color: #f8f8f8; border: 1px solid #eee;  padding: 6px 10px; border-radius: 3px; }
+.highlight .lineno { color: #ccc; padding: 0 5px; border-right:1px solid #ccc; }
+
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { color: #4C9CF1; font-weight: normal } /* Keyword */
@@ -59,12 +64,6 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
-
-.highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; }
-.highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
-
-.highlight table { border: none; }
-.highlight td { border: none; }
 
 /* instruct browser not to allow lineno elements to contain selectable text */
 .lineno {
