--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Pingfu</a>
+            <a class="navbar-brand" href="/">Pingfu</a>
         </div>
     
         <div id="navbar-main" class="collapse navbar-collapse">
@@ -18,7 +18,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/tools/dns">DNS toolbox</a></li>
                         <li><a href="/tools/generate-passwords">Password generator</a></li>
-                        <li><a href="/tools/iis-remove-server-headers">IIS Remove Server Headers Module</a></li>
+                        <li><a href="/tools/iis-remove-server-headers">IIS remove server headers module</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
