--- a/css/main.scss
+++ b/css/main.scss
@@ -546,6 +546,11 @@ ul {
     h1 {
         border-bottom: 1px solid $border-color;
     }
+
+    hr {
+        margin: 80px 0;
+        size: 5px;
+    }
     
     img {
         max-width: 100%;
