--- a/css/main.scss
+++ b/css/main.scss
@@ -107,6 +107,12 @@ p {
     margin: 0 0 14px 0;
 }
 
+p, 
+li, 
+td {
+    word-wrap: break-word;
+}
+
 section {
     margin: 80px auto;
     max-width: 1080px;
@@ -574,7 +580,7 @@ ul {
     }
    
     td:last-child {
-        word-wrap: break-word; 
+        word-wrap: break-word;
         white-space: normal;
     }
 }
