--- a/css/main.scss
+++ b/css/main.scss
@@ -199,6 +199,10 @@ ul {
 
     .navbar-nav {
 
+        .dropdown-menu {
+            border-radius: 0;
+        }
+
         li a {
             font-family: $font-family-4, $font-family-4;
             font-size: 11px;
