--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"       integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="/js/slick/slick.css"/> <!-- http://kenwheeler.github.io/slick/ -->
+    <!-- http://kenwheeler.github.io/slick/
+    <link rel="stylesheet" type="text/css" href="/js/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="/js/slick/slick-theme.css"/>
+    -->
 
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/syntax.css">
@@ -35,18 +37,15 @@
     {{ content }}
 
 
-
-
-
-
     <div id="footer">
         <blockquote>Knock knock<br />Race condition<br />Who's there?</blockquote>
     </div>
 
-    <script type="text/javascript" src="/js/slick/slick.min.js"></script>
+    <!-- 
+    <script type="text/javascript" src="/js/slick/slick.min.js"></script> -->
     <script type="text/javascript">
 
-        /* slick-carousel init */
+        /* slick-carousel init
         $(document).ready(function() {
             $(".slick-carousel").slick({
                 dots: false,
@@ -60,7 +59,7 @@
                 lazyLoad: 'ondemand',
                 responsive: [ { breakpoint: 1024, settings: { dots: false } } ]
             });
-        });
+        }); */
         
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-244950-9']);
