--- a/_includes/scss/main.scss
+++ b/_includes/scss/main.scss
@@ -144,6 +144,15 @@ ul {
     }
 }
 
+button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 /******************************************************************************/
 
 .navbar {
@@ -504,6 +513,13 @@ ul {
             font-size: x-small;
             color: #aaa;
             margin: 0 10px 0 0;
+
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
 
         .copyButton {
