--- a/_includes/scss/main.scss
+++ b/_includes/scss/main.scss
@@ -1,4 +1,5 @@
 $white: #ffffff;
+$home-page-boxes: #f8f8f8;
 $background-color: #F0F2F3;
 $border-color: #e9e9e9;
 
@@ -303,6 +304,41 @@ button {
             font-family: $font-family-4;
             margin-left: 6px;
         }  
+    }
+
+    .assets {
+        background-color: $home-page-boxes;
+        /*border: 1px solid #e9e9e9;*/
+        border-radius: 4px;
+        padding: 20px;
+
+        ul { 
+            margin: 0;
+            list-style: none;
+            list-style-type: none;
+            padding: 0;
+        }
+        
+        li {
+            margin: 0 0 28px 0;
+
+            h2 {
+                margin: 0 0 8px 0;
+            }
+    
+            h3 {
+                margin: 0 0 8px 0;
+            }
+    
+            p {
+                text-align: left;
+                margin: 0;
+            }
+        }
+
+        li:last-child {
+            margin: 0;
+        }
     }
 }
 
