--- a/_includes/scss/syntax.scss
+++ b/_includes/scss/syntax.scss
@@ -1,4 +1,4 @@
-.highlight { background-color: #f8f8f8; border: 1px solid #eee;  padding: 6px 10px; border-radius: 3px; }
+.highlight { background-color: #f8f8f8; border: 1px solid #eee;  padding: 6px 10px; border-radius: 3px; margin: 14px 0; }
 .highlight .lineno { color: #ccc; padding: 0 5px; border-right:1px solid #ccc; }
 
 .highlight .c { color: #999988; font-style: italic } /* Comment */
