--- a/_includes/scss/main.scss
+++ b/_includes/scss/main.scss
@@ -154,6 +154,11 @@ button {
   user-select: none;
 }
 
+blockquote {
+    border-left: 5px solid #f1e594;
+    background: #fbfada;
+}
+
 /******************************************************************************/
 
 .navbar {
