--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,6 +16,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools<span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/tools/youtube">Embedded YouTube player</a></li>
                         <li><a href="/tools/dns">DNS toolbox</a></li>
                         <li><a href="/tools/generate-passwords">Password generator</a></li>
                         <li><a href="/tools/iis-remove-server-headers">IIS remove server headers module</a></li>
