--- a/_includes/scss/main.scss
+++ b/_includes/scss/main.scss
@@ -347,6 +347,50 @@ blockquote {
     }
 }
 
+#youtube-embed {
+    
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    text-align: center;
+
+    .container {
+        text-align: center;
+        width: 100%;
+    }
+
+    input[type="text"] {
+        padding: 10px;
+        margin: 10px 0;
+        width: 40%;
+        color: #444;
+    }
+
+    button {
+        padding: 10px 20px;
+        cursor: pointer;
+        color: #444;
+    }
+
+    iframe {
+        margin-top: 20px;
+        border: none;
+        width: 100%;
+        height: 500px;
+    }
+
+    .video-link {
+        color: #007BFF;
+        font-size: 12px;
+        display: none;
+    }
+
+    #youTubeLinkContainer {
+        margin-top: 10px;
+        font-size: 12px;
+        display: none;
+    }
+}
+
 #dns-toolbox {
 
     overflow-x: auto;
