--- a/_includes/scss/main.scss
+++ b/_includes/scss/main.scss
@@ -468,7 +468,8 @@ blockquote {
         font-size: 16px;
     }
 
-    .notes-input {
+    .notes-input, 
+    .group-input {
         width: 100%;
         box-sizing: border-box;
         padding: 6px 8px;
