--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,21 +12,23 @@
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300|Open+Sans+Condensed:300|Roboto:300">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300|Open+Sans+Condensed:300">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"       integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <!-- Prism.js syntax highlighting -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/line-numbers/prism-line-numbers.min.css">
+
     {% capture mainstyles %}{% include scss/main.scss %}{% endcapture %}
-    {% capture syntaxstyles %}{% include scss/syntax.scss %}{% endcapture %}
 
     <style>
         {{ mainstyles | scssify }}
-        {{ syntaxstyles | scssify }}
     </style>
 
 </head>
 
-<body>
+<body{% if page.body_class %} class="{{ page.body_class }}"{% endif %}>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-3.2.1.min.js"                                      integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"              integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -60,20 +62,40 @@
             });
         }); */
         
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-244950-9']);
-        _gaq.push(['_setDomainName', 'pingfu.net']);
-        _gaq.push(['_trackPageview']);
-
+        // Google Analytics 4
         (function() {
-            var ga = document.createElement('script');
-            var s = document.getElementsByTagName('script')[0];
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';    
-            s.parentNode.insertBefore(ga, s);
+            var script = document.createElement('script');
+            script.async = true;
+            script.src = 'https://www.googletagmanager.com/gtag/js?id=G-GVTKN05RK1';
+            document.head.appendChild(script);
+
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-GVTKN05RK1');
         })();
 
+    </script>
+
+    <!-- Prism.js syntax highlighting -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script>
+        // Add line-numbers class only to code blocks with a real language (not plaintext)
+        // Kramdown puts language-* class on wrapper div, not on code element
+        document.querySelectorAll('pre').forEach(function(pre) {
+            var code = pre.querySelector('code');
+            var wrapper = pre.closest('.highlighter-rouge');
+            var wrapperClass = wrapper ? wrapper.className : '';
+            var codeClass = code ? code.className : '';
+            var hasRealLanguage = (codeClass.match(/language-/) && !codeClass.match(/language-plaintext/)) ||
+                                  (wrapperClass.match(/language-/) && !wrapperClass.match(/language-plaintext/));
+            if (hasRealLanguage) {
+                pre.classList.add('line-numbers');
+            }
+        });
+        Prism.highlightAll();
     </script>
 
 </body>
