--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ redirect_from: "/blog/"
 	<div class="breadcrumb"><a href="/">Home</a> <span class="divider">›</span> {{ page.title }}</div>
 
 	<h2>{{ page.title }}</h2>
-	<p class="meta">Posted: {{ page.date | date_to_string }} — {% for category in page.categories %} <span class="category">{{ category }}</span> {% endfor %}</p>
+	<p class="meta">Posted: {{ page.date | date_to_string }}</p>
 
 	<div class="post disqus">
 		{{ content }}
