Add plausible analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,13 @@
 
     </script>
 
+    <!-- Privacy-friendly analytics by Plausible -->
+    <script async src="https://analytics.pingfu.net/js/pa-Xxz4TdqMpWKHOHqc3yqNY.js"></script>
+    <script>
+    window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+    plausible.init()
+    </script>
+
     <!-- Prism.js syntax highlighting -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
